--- a/AHQ/Base.lproj/Main.storyboard
+++ b/AHQ/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,7 +24,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EsG-iG-nNf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1" y="-840"/>
+            <point key="canvasLocation" x="-1209" y="-1000"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="aRC-6i-oaz">
@@ -98,7 +99,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jMu-68-LPt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="920.79999999999995" y="-840.62968515742136"/>
+            <point key="canvasLocation" x="-286" y="-1001"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="hNz-n2-bh7">
@@ -165,12 +166,30 @@
                     <connections>
                         <segue destination="NfS-gw-gKp" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="4AV-Qa-9Xb" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="dfe-n1-3Fq" kind="relationship" relationship="viewControllers" id="hYv-1Y-6WC"/>
+                        <segue destination="TA9-JP-HTr" kind="relationship" relationship="viewControllers" id="zTJ-ER-18d"/>
                         <segue destination="2RF-4T-2wX" kind="relationship" relationship="viewControllers" id="RL6-rn-wUj"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2" y="104"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wa8-UT-MHM">
+            <objects>
+                <viewController id="3TZ-nC-PYd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OLq-zm-tIC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="V55-8X-9EY"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="KsF-SA-ZZu"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QIx-M2-wQH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3308" y="233.49753694581281"/>
         </scene>
         <!--Home-->
         <scene sceneID="3zA-xT-Tev">
@@ -195,7 +214,7 @@
         <scene sceneID="zGM-js-Xv1">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4AV-Qa-9Xb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="first" id="cPa-gy-q4n"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jll-S7-DaH">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -256,11 +275,105 @@
             </objects>
             <point key="canvasLocation" x="-34" y="2588"/>
         </scene>
+        <!--Test Collection View Controller-->
+        <scene sceneID="bb4-dj-ESG">
+            <objects>
+                <collectionViewController storyboardIdentifier="TestCollectionViewController" id="eON-oV-zS6" customClass="TestCollectionViewController" customModule="AHQ" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="fkv-WF-0g5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0pT-Q4-zkv">
+                            <size key="itemSize" width="360" height="200"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="testCell" id="5Lb-GJ-81H" customClass="TestCollectionViewCell" customModule="AHQ" customModuleProvider="target">
+                                <rect key="frame" x="7.666666666666667" y="0.0" width="360" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="360" height="200"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mHv-iH-gAc">
+                                            <rect key="frame" x="13" y="143" width="44" height="44"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="44" id="2Ki-wd-Ffo"/>
+                                                <constraint firstAttribute="height" constant="44" id="Hez-zB-nc5"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pch-bV-Wbs">
+                                            <rect key="frame" x="67" y="142" width="280" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="w0M-Ad-BSe"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Krc-rR-egf">
+                                            <rect key="frame" x="67" y="167" width="280" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="HPw-67-8CT"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXB-zV-NKI">
+                                            <rect key="frame" x="13" y="57" width="334" height="80"/>
+                                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottomMargin" secondItem="mHv-iH-gAc" secondAttribute="bottom" constant="5" id="0dp-gv-pv1"/>
+                                    <constraint firstItem="Krc-rR-egf" firstAttribute="leading" secondItem="mHv-iH-gAc" secondAttribute="trailing" constant="10" id="3Ki-gU-RqC"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="lXB-zV-NKI" secondAttribute="trailing" constant="5" id="6Kp-jR-233"/>
+                                    <constraint firstItem="lXB-zV-NKI" firstAttribute="leading" secondItem="5Lb-GJ-81H" secondAttribute="leadingMargin" constant="5" id="8a1-Ui-hha"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Pch-bV-Wbs" secondAttribute="trailing" constant="5" id="EvH-ZW-F0r"/>
+                                    <constraint firstItem="Krc-rR-egf" firstAttribute="top" secondItem="Pch-bV-Wbs" secondAttribute="bottom" constant="5" id="Jyr-z6-AAR"/>
+                                    <constraint firstItem="Pch-bV-Wbs" firstAttribute="top" secondItem="lXB-zV-NKI" secondAttribute="bottom" constant="5" id="Qck-ru-TBh"/>
+                                    <constraint firstItem="lXB-zV-NKI" firstAttribute="top" secondItem="5Lb-GJ-81H" secondAttribute="topMargin" constant="5" id="RxP-Df-Apf"/>
+                                    <constraint firstItem="Pch-bV-Wbs" firstAttribute="leading" secondItem="mHv-iH-gAc" secondAttribute="trailing" constant="10" id="VNs-8U-yDr"/>
+                                    <constraint firstItem="lXB-zV-NKI" firstAttribute="top" secondItem="5Lb-GJ-81H" secondAttribute="topMargin" constant="5" id="ZHy-Mr-Oev"/>
+                                    <constraint firstItem="lXB-zV-NKI" firstAttribute="leading" secondItem="5Lb-GJ-81H" secondAttribute="leadingMargin" constant="5" id="aZA-YC-Qgk"/>
+                                    <constraint firstItem="Pch-bV-Wbs" firstAttribute="top" secondItem="lXB-zV-NKI" secondAttribute="bottom" constant="5" id="bCL-aT-dGY"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Krc-rR-egf" secondAttribute="trailing" constant="5" id="eII-mC-Tbv"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="Krc-rR-egf" secondAttribute="bottom" constant="5" id="sJ7-rP-SUx"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="lXB-zV-NKI" secondAttribute="trailing" constant="5" id="tFk-Kd-bTT"/>
+                                    <constraint firstItem="mHv-iH-gAc" firstAttribute="leading" secondItem="5Lb-GJ-81H" secondAttribute="leadingMargin" constant="5" id="xR2-it-wWo"/>
+                                </constraints>
+                                <size key="customSize" width="360" height="200"/>
+                                <connections>
+                                    <outlet property="contentLabel" destination="lXB-zV-NKI" id="T5y-dh-7N7"/>
+                                    <outlet property="nameLabel" destination="Pch-bV-Wbs" id="ngF-of-1dS"/>
+                                    <outlet property="otherLabel" destination="Krc-rR-egf" id="kbc-ec-Nk4"/>
+                                    <outlet property="profileImageView" destination="mHv-iH-gAc" id="A4x-IF-Q0P"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="eON-oV-zS6" id="W0U-ZV-hWc"/>
+                            <outlet property="delegate" destination="eON-oV-zS6" id="TyO-cO-0rd"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rhg-a6-jPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="752.79999999999995" y="2587.6847290640394"/>
+        </scene>
         <!--3D Lab-->
         <scene sceneID="vIO-Pv-TJA">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2RF-4T-2wX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="3D Lab" id="cBB-fl-B2b"/>
+                    <tabBarItem key="tabBarItem" title="3D Lab" image="first" id="cBB-fl-B2b"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R28-8Q-QOa">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -275,9 +388,62 @@
             </objects>
             <point key="canvasLocation" x="1704.8" y="894.82758620689663"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="8JC-ya-oRx">
+            <objects>
+                <viewController id="wSc-c0-4Gr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zIz-Oa-eKL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="aKu-ya-StJ"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xLg-gY-f1v"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4hR-48-y7N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3319.1999999999998" y="-427.09359605911334"/>
+        </scene>
+        <!--Record-->
+        <scene sceneID="qT2-eA-Dhy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dfe-n1-3Fq" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Record" image="first" id="Whr-s3-9fy"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZL9-eF-yd0">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3TZ-nC-PYd" kind="relationship" relationship="rootViewController" id="bLa-Cu-pEp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vVd-Q2-how" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2365.5999999999999" y="233.49753694581281"/>
+        </scene>
+        <!--Calendar-->
+        <scene sceneID="SRc-WB-t0v">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TA9-JP-HTr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Calendar" image="first" id="gCl-qp-VfS"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Iym-zu-Rjo">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wSc-c0-4Gr" kind="relationship" relationship="rootViewController" id="m9J-Nc-rOd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WoM-cP-fRX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2376.8000000000002" y="-427.09359605911334"/>
+        </scene>
     </scenes>
     <resources>
         <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
     </resources>
 </document>
